Tue May 31 20:04:00 UTC 2011  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.cpp:

          Move the point where the initial monitor message is published.
          The message was being sent before the GUID was initialized.

        * tools/monitor/MonitorDataStorage.inl:

          Don't generate entries for a transport with a key of zero.  This 
          is really a nil-reference.  In addition, don't show QoS data 
          when it is not found.  There are still additional QoS-related
          problems that prevent the proper display of this data, but this
          change prevents the display of uninitialized data.

Tue May 31 12:43:14 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.gmf/templates/aspects/xpt/plugin/plugin.xpt:

          Modify menu template to not enable cut, copy and paste of figure elements
          because copy and paste are broken in GMF 2.2.2 (see
          http://esalagea.wordpress.com/2011/04/13/lets-solve-once-for-all-the-gmf-copy-paste-problem-and-then-forget-about-it/
          for more information).

        * tools/modeling/plugins/org.opendds.modeling.diagram.datalib/plugin.xml:
        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/plugin.xml:
        * tools/modeling/plugins/org.opendds.modeling.diagram.main/plugin.xml:
        * tools/modeling/plugins/org.opendds.modeling.diagram.policylib/plugin.xml:

          Updates due to addition of AROUND template in plugin.xpt.

Fri May 27 20:00:24 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.diagram.main/src/org/opendds/modeling/diagram/main/edit/parts/LibPackage2EditPart.java:
        * tools/modeling/plugins/org.opendds.modeling.diagram.main/src/org/opendds/modeling/diagram/main/edit/parts/LibPackageEditPart.java: